Blank java fx app