@@ -1,2 +1,9 @@
 # Maze-generator
 Computer app which generates random solvable mazes
+ 
+# Launch the app
+In the root folder compile the application:
+javac --module-path lib --add-modules javafx.controls,javafx.fxml src/gui/Driver.java
+
+Run it:
+java --module-path lib --add-modules javafx.controls,javafx.fxml src.gui.Driver
